<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:gravity="center_vertical">

  <TextView
      android:id="@+id/irc_prior_error"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:visibility="gone"
      android:layout_marginBottom="10dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/irc_server"
      android:layout_marginBottom="10dp"
      />

  <EditText
      android:id="@+id/irc_server"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:maxLines="1"
      android:imeOptions="actionNext"
      android:layout_marginBottom="10dp"
      />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/irc_nickname"
      android:layout_marginBottom="10dp"
      />

  <EditText
      android:id="@+id/irc_nickname"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:inputType="text"
      android:maxLines="1"
      android:imeOptions="actionGo"
      android:layout_marginBottom="10dp"
      />

  <Button
      android:id="@+id/irc_connect"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/irc_connect"
      />

</LinearLayout>